// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render normally 1`] = `
<View
  pointerEvents="box-only"
  style={
    Array [
      Object {
        "height": 20,
        "width": 100,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 0,
      },
      undefined,
    ]
  }
>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "#c7c7cc",
          "fontSize": 20,
          "height": 25,
          "lineHeight": 25,
          "width": 20,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={1}
  >
    ☆
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "#c7c7cc",
          "fontSize": 20,
          "height": 25,
          "lineHeight": 25,
          "width": 20,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={2}
  >
    ☆
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "#c7c7cc",
          "fontSize": 20,
          "height": 25,
          "lineHeight": 25,
          "width": 20,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={3}
  >
    ☆
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "#c7c7cc",
          "fontSize": 20,
          "height": 25,
          "lineHeight": 25,
          "width": 20,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={4}
  >
    ☆
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "#c7c7cc",
          "fontSize": 20,
          "height": 25,
          "lineHeight": 25,
          "width": 20,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={5}
  >
    ☆
  </RatingSymbol>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 0,
        "height": 20,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": 60,
      }
    }
  >
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "#c7c7cc",
              "fontSize": 20,
              "height": 25,
              "lineHeight": 25,
              "width": 20,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "#ff9500",
          },
        ]
      }
      value={1}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "#c7c7cc",
              "fontSize": 20,
              "height": 25,
              "lineHeight": 25,
              "width": 20,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "#ff9500",
          },
        ]
      }
      value={2}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "#c7c7cc",
              "fontSize": 20,
              "height": 25,
              "lineHeight": 25,
              "width": 20,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "#ff9500",
          },
        ]
      }
      value={3}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "#c7c7cc",
              "fontSize": 20,
              "height": 25,
              "lineHeight": 25,
              "width": 20,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "#ff9500",
          },
        ]
      }
      value={4}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "#c7c7cc",
              "fontSize": 20,
              "height": 25,
              "lineHeight": 25,
              "width": 20,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "#ff9500",
          },
        ]
      }
      value={5}
    >
      ★
    </RatingSymbol>
  </View>
</View>
`;

exports[`should render with custom props 1`] = `
<View
  pointerEvents="box-only"
  style={
    Array [
      Object {
        "height": 30,
        "width": 300,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 0,
      },
      undefined,
    ]
  }
>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 30,
          "height": 37.5,
          "lineHeight": 37.5,
          "width": 30,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={1}
  >
    ★
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 30,
          "height": 37.5,
          "lineHeight": 37.5,
          "width": 30,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={2}
  >
    ★
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 30,
          "height": 37.5,
          "lineHeight": 37.5,
          "width": 30,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={3}
  >
    ★
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 30,
          "height": 37.5,
          "lineHeight": 37.5,
          "width": 30,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={4}
  >
    ★
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 30,
          "height": 37.5,
          "lineHeight": 37.5,
          "width": 30,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={5}
  >
    ★
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 30,
          "height": 37.5,
          "lineHeight": 37.5,
          "width": 30,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={6}
  >
    ★
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 30,
          "height": 37.5,
          "lineHeight": 37.5,
          "width": 30,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={7}
  >
    ★
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 30,
          "height": 37.5,
          "lineHeight": 37.5,
          "width": 30,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={8}
  >
    ★
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 30,
          "height": 37.5,
          "lineHeight": 37.5,
          "width": 30,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={9}
  >
    ★
  </RatingSymbol>
  <RatingSymbol
    animate={true}
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 30,
          "height": 37.5,
          "lineHeight": 37.5,
          "width": 30,
        },
        Object {
          "backgroundColor": "transparent",
          "flexShrink": 0,
          "fontFamily": "System",
          "fontWeight": "200",
          "includeFontPadding": false,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
      ]
    }
    value={10}
  >
    ★
  </RatingSymbol>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 0,
        "height": 30,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": 90,
      }
    }
  >
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
              "height": 37.5,
              "lineHeight": 37.5,
              "width": 30,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "blue",
          },
        ]
      }
      value={1}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
              "height": 37.5,
              "lineHeight": 37.5,
              "width": 30,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "blue",
          },
        ]
      }
      value={2}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
              "height": 37.5,
              "lineHeight": 37.5,
              "width": 30,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "blue",
          },
        ]
      }
      value={3}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
              "height": 37.5,
              "lineHeight": 37.5,
              "width": 30,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "blue",
          },
        ]
      }
      value={4}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
              "height": 37.5,
              "lineHeight": 37.5,
              "width": 30,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "blue",
          },
        ]
      }
      value={5}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
              "height": 37.5,
              "lineHeight": 37.5,
              "width": 30,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "blue",
          },
        ]
      }
      value={6}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
              "height": 37.5,
              "lineHeight": 37.5,
              "width": 30,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "blue",
          },
        ]
      }
      value={7}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
              "height": 37.5,
              "lineHeight": 37.5,
              "width": 30,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "blue",
          },
        ]
      }
      value={8}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
              "height": 37.5,
              "lineHeight": 37.5,
              "width": 30,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "blue",
          },
        ]
      }
      value={9}
    >
      ★
    </RatingSymbol>
    <RatingSymbol
      animate={true}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 30,
              "height": 37.5,
              "lineHeight": 37.5,
              "width": 30,
            },
            Object {
              "backgroundColor": "transparent",
              "flexShrink": 0,
              "fontFamily": "System",
              "fontWeight": "200",
              "includeFontPadding": false,
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ],
          Object {
            "color": "blue",
          },
        ]
      }
      value={10}
    >
      ★
    </RatingSymbol>
  </View>
</View>
`;
